<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="393dp"
        android:layout_height="199dp"
        android:fontFamily="@font/audiowide"
        android:lineSpacingExtra="8sp"
        android:rotationX="5"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="#39009F"
        android:textSize="96sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/buttonNav"
        android:layout_width="267dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/navigation_str"
        android:drawableRight="@android:drawable/ic_menu_mapmode"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/buttonHist"
        android:layout_width="267dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/history_str"
        android:drawableRight="@android:drawable/ic_menu_recent_history"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/buttonGnss"
        android:layout_width="267dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/gnss_str"
        android:drawableRight="@android:drawable/ic_menu_mylocation"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/buttonSettn"
        android:layout_width="267dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/config_str"
        android:drawableRight="@android:drawable/ic_menu_preferences"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/buttonCredits"
        android:layout_width="267dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/credits_str"
        android:drawableRight="@android:drawable/ic_menu_info_details"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="267dp"
        android:layout_height="70dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/exit_str"
        android:drawableRight="@android:drawable/ic_menu_close_clear_cancel"
        android:textAlignment="viewStart" />

</LinearLayout>