<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GnssActivity">

    <ImageView
        android:id="@+id/backgroundHis"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/circleView1"
        app:layout_constraintEnd_toEndOf="@+id/circleView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/sattelites_background" />

    <com.unifacs.projetoavaliacao.CircleView
        android:id="@+id/circleView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        app:Radius="5"
        app:Text=""
        app:TextColor="#ffff00"
        app:Xc="10"
        app:Yc="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvSatsInUse"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/tv_sats_in_use"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/barra" />

    <TextView
        android:id="@+id/tvLatitudeCV"
        android:layout_width="331dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/tv_lat"
        android:textColor="#93002F"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLongitudeCV"
        android:layout_width="335dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/tv_long"
        android:textColor="#93002F"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitudeCV" />

    <TextView
        android:id="@+id/tvElevacao"
        android:layout_width="335dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/tv_elev"
        android:textColor="#93002F"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitudeCV" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="599dp" />

    <TextView
        android:id="@+id/tvSatsInView"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/tv_sats_in_view"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <TextView
        android:id="@+id/tvCnr"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/cnr_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="196dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="161dp" />
</androidx.constraintlayout.widget.ConstraintLayout>